# ewine

./: .clang-format  README.md  components.c  components.h  config.c  config.h  create.c  create.h  data.c  data.h  list.c  list.h  main.c  meson.build  remove.c  remove.h  run.c  run.h  util.c  util.h
header/: toml-c.h
src/: main.c
